--- a/exercises/01.md
+++ b/exercises/01.md
@@ -125,7 +125,7 @@ Nachdem du die Webseite aufgebaut hast, kannst du zusätzliche Anpassungen vorne
 ---
 
 ## 📦 Abgabe
-1. Lade dein Projekt auf GitHub hoch.
+1. Lade dein Projekt auf GitHub hoch. (Forke dir dieses Repo auf den privaten Account)
 2. Stelle sicher, dass der Code mit Prettier formatiert ist.
 3. Reiche den Link zum GitHub-Repository ein.
 
