--- a/exercises/01.md
+++ b/exercises/01.md
@@ -5,7 +5,7 @@
 4. Erstelle ein neues HTML-Dokument
 ## 🧱 Schritt 1: HTML-Datei erstellen
 
-Erstelle die Datei `index.html` mit der grundlegenden Struktur. Die Formatierung und das Layout der Elemente sollen mit Tailwind CSS erfolgen, jedoch musst du die passenden Klassen selbst auswählen.
+Nimm die Datei `index.html` mit der grundlegenden Struktur. Die Formatierung und das Layout der Elemente sollen mit Tailwind CSS erfolgen, jedoch musst du die passenden Klassen selbst auswählen.
 
 ### 📋 Grundgerüst der HTML-Datei:
 
@@ -73,7 +73,8 @@ Erstelle die Datei `index.html` mit der grundlegenden Struktur. Die Formatierung
 </body>
 </html>
 ```
-
+Achtung: Hier werden Assets verwendet. Diese Assets werden im Repository mitgeliefert. Mit dem Einrichten eines neuen Vite-Projekts, wird dir ein neuer public-
+Ordner angelegt. Kopiere die Assets aus dem Repository in den public-Ordner des erstellten Vite-Projekts.
 ---
 
 ## 🧩 Schritt 2: Tailwind CSS Klassen anwenden
